# gocastmain

./: .gitignore  .gitmodules  DEPS
documents/: .gitignore  iOS_Theory_of_Operation.odt
projects/android-peerconnection/: .project  AndroidManifest.xml
projects/android-peerconnection/res/values/: strings.xml
projects/android/KDDIDemo/: .gitignore  .project  Android.mk  AndroidManifest.xml
projects/android/KDDIDemo/jni/: Android.mk  Application.mk
projects/android/PeerConnectionTest/: .gitignore  .project  Android.mk  AndroidManifest.xml
projects/android/PeerConnectionTest/jni/: Android.mk  Application.mk
projects/desktop/gocastplayer/: README  README_linux  buildplugin.sh  buildplugin_linux.sh  deploy_plugin_linux.sh  getdeps.sh  prepdeps.sh  prepplugin.sh  prepplugin_linux.sh  push-gcpsettings-dnle.sh  push-gcpsettings.sh
projects/desktop/tropicssl/testjig/: .gitignore  compile.sh  holes.cpp  message.crypt  message.openssl.crypt  privkey.pem  pubkey.pem  sauce1.cpp  sig
projects/desktop/utilities/: backup_script_rwolff.sh
projects/desktop/utilities/jscrambler_php_client/: README.txt  get.php  index.php  jscrambler.php  postup.php  status.php
projects/getID3-1.9.7/: demo.basic.php
projects/getID3-1.9.7/demos/: demo.mimeonly.php
projects/gocastjs/: class.js  ddjstest.html  jquery.utils.js  notifier.js  spot.js  spotfactory.js  statemachine.js  strophe_attach.js  strophe_connection.js  strophe_connection_test.html  variant.js
projects/gocastjs/gocastmarkersignup/: publish.sh
projects/gocastjs/gocastmarkersignup/css/: index.css
projects/gocastjs/gocastmarkersignup/html/: index.html
projects/gocastjs/ibb/: ibb.js
projects/gocastjs/nodejs/: filecatcher_node.js  gcall_node.js  gcutil_node.js  ibb_node.js  notifier_node.js
projects/gocastjs/test/: spotfactorytest.html
projects/gocastjs/tests/: class.sh  class_test.html  class_test.js  spot.sh  spot_test.html  spot_test.js
projects/gocastjs/ui/: deskshare.js  fbevent.html  fileshare.js  fileviewer.js  gcedit.js  iRelate.js  uiutil.js  wb.js  wiki.js
projects/gocastjs/urlsnapshot/: index.html  push.sh  urlsnapshot.js
projects/gocastjs/webrtc/: getusermedia.js  peerconnection.js  testpcnativegcp.html  testpeerconnection.html  testpluginr247.html
projects/gocastjs/webrtc/revuptest/: index.html  publish.sh
projects/gocastjs/wikiapitry/: index.html
projects/gocastjs/wikibrowser/: index.html
projects/gocastjs/wikibrowser/css/: index.css
projects/gocastjs/wikibrowser/js/: index.js
projects/gocasttalk/erizoclient/: Connection.js  GoCastTalkStack.js
projects/ios/: .gitignore  985changes.tgz  modules.target
projects/ios/apps/GoCastMail/: .gitignore
projects/ios/apps/GoCastTalk/: .gitignore
projects/ios/apps/carousel/: test.txt  tj.txt
projects/memoappserver/: changePassword.php  deleteMessage.php  filename  getAudio.php  getContacts.php  getFile.php  getGroups.php  getid3  index.php  listMessages.php  login.php  logout.php  mailgun.sh  markRead.php  mimeMap.php  postAudio.php  postContent.php  postMessage.php  postTranscription.php  register.php  resetPassword.php  resetToken.php  setContacts.json  setContacts.php  setGroups.php  utils.php  validUsers.php
projects/memoappserver/test/: testContacts.html  testGroups.html  testPost.html  testPostAudio.html  testTranscription.html  testValidUsers.html
projects/openfire_src/: login.java
projects/openfire_src/src/: authtoken.java  changedfiles  doit
projects/openfire_src/src/conf/: openfire.xml
projects/openfire_src/src/web/: client-connections-settings.jsp
projects/openfire_src/test/: test1.sh  test2.sh  test3.sh  test4.sh  test5.sh  test6.sh  test7.sh
projects/server/: backupPrune.js  carousel.sublime-project  carousel.sublime-workspace  cccServerScriptsPush.sh  devServerScriptsPush.sh  dnleServerScriptsPush.sh  etzchayim.sh  proxy.py  settings.js  testSettings.js  videoServerScriptsPush.sh
projects/server/accounts/: xmpp_importmerge.js
projects/server/accounts/client/: publish.sh
projects/server/accounts/server/: accounts_api.js  accounts_db.js  accounts_db_test.js  accounts_loginXmpp.js  accounts_memdb.js  accounts_memdb_test.js  mailgun_test.js  (+4 more)
projects/server/cachemanifest/: genmanifest.js
projects/server/carousel/: authtest.html  cache-manifest.appcache  demo.html  iframe.html  index.html  index2.html  index_fb.html  index_reg.html  publish-dev.sh  publish-dnle.sh  publish-jk.sh  publish-mm.sh  publish-rwolff.sh  publish.sh  push-jk-js.sh  push-jk.sh  push-rwolff.sh  push.sh  registration_complete.html
projects/server/etzchayim/: index-orig.html
projects/server/friends/: GoCastPlayer.msi
projects/server/fuse/: GoCastPlayer.pkg  index.html
projects/server/logcatcher/: filecatcher.js  logcatcher.js  push.sh
projects/server/main_website/: GoCastAudio.html  GoCastVideoTest.html  Oindex.html  build-tips.html  docs.html  getting-started-background.html  getting-started.html  give-it-a-try.html  header.html  how-server-protocol-works.html  index.html  license-rights.html  license.html  open-source.html  peer-connection-signaling-protocol.html  plugin-api-spec.html  push.sh  requirements.html  script-details.html  srcdocs.tgz
projects/server/people/: eula.html  index.html  people.css  people.js  push.sh  run_example.js  test.js
projects/server/scripts/: html2canvas.js  strophe.jingle.js  strophe.muc.js  strophe.pubsub.js
projects/server/serverBot/: .gitignore  nodeWB.js  schedules.xml  serverBot.js
projects/server/servertree/: .gitignore  filelist.txt  gatherServerFiles.js  pullFromServerToClient.sh
projects/server/stunserver/: .gitignore  CMakeLists.txt  getdeps.sh
projects/server/switchboard/: push.sh  switchboard.js
projects/server/temp/: conv.js  dump.js  verify.js
projects/server/test-iframe/: iframe.html  index.html  push.sh
projects/xmpp-peerconnection/: .project  README  callcast.html  callcast.js  callcast_settings.js  push.sh  scrum.html  scrum.js  testjinglertc.css  testjinglertc.html  testjinglertc.js
projects/xmpp-peerconnection/gcpsettings/: index.html  index.js  jquery-ui.js
(+1434 files in other folders)
